Just Before Data Seed

--- a/YouTube.Plumbing/appsettings.json
+++ b/YouTube.Plumbing/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=HASAN\\SQLEXPRESS;Database=PlumbingDB;Trusted_Connection=True;TrustServerCertificate=True;"
+
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
