before fluent api

--- a/EntityLayer/EntityLayer.csproj
+++ b/EntityLayer/EntityLayer.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Identity\Entities\" />
     <Folder Include="Identity\ViewModels\" />
   </ItemGroup>
 
