--- a/ServiceLayer/ServiceLayer.csproj
+++ b/ServiceLayer/ServiceLayer.csproj
@@ -14,6 +14,7 @@
     <Folder Include="Automapper\Identity\" />
     <Folder Include="Exception\Identity\" />
     <Folder Include="Exception\WebApplication\" />
+    <Folder Include="Extensions\Identity\" />
     <Folder Include="Extensions\WebApplication\" />
     <Folder Include="Filters\Identity\" />
     <Folder Include="Filters\WebApplication\" />
@@ -31,7 +32,6 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.11" />
   </ItemGroup>
 
 </Project>
