main Identity finished

--- a/YouTube.Plumbing/appsettings.json
+++ b/YouTube.Plumbing/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "EmailSettings": {
+    "Email": "test.video.lesson@gmail.com",
+    "Host": "smtp.gmail.com",
+    "Password": "svgi fyxk mizy idps"
+  },
+
   "ConnectionStrings": {
     "SqlConnection": "Server=HASAN\\SQLEXPRESS;Database=PlumbingDB;Trusted_Connection=True;TrustServerCertificate=True;"
 
