--- a/ServiceLayer/ServiceLayer.csproj
+++ b/ServiceLayer/ServiceLayer.csproj
@@ -14,9 +14,7 @@
     <Folder Include="Customization\WebApplication\" />
     <Folder Include="Exception\Identity\" />
     <Folder Include="Exception\WebApplication\" />
-    <Folder Include="Extensions\WebApplication\" />
     <Folder Include="Filters\Identity\" />
-    <Folder Include="Filters\WebApplication\" />
     <Folder Include="Helpers\WebApplication\" />
     <Folder Include="Middlewares\Identity\" />
     <Folder Include="Middlewares\WebApplication\" />
@@ -26,6 +24,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
+    <PackageReference Include="NToastNotify" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
