--- a/YouTube.Plumbing/appsettings.json
+++ b/YouTube.Plumbing/appsettings.json
@@ -1,8 +1,8 @@
 {
   "EmailSettings": {
-    "Email": "test.video.lesson@gmail.com",
-    "Host": "smtp.gmail.com",
-    "Password": "svgi fyxk mizy idps"
+    "Email": "please type your email address",
+    "Host": "host address",
+    "Password": "email password key for 3rd party app"
   },
 
   "ConnectionStrings": {
